--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -1,25 +1,103 @@
-<mvc:View controllerName="com.fidschenberger.wasteStatsApp.controller.Home" displayBlock="true" xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:f="sap.f" xmlns:mvc="sap.ui.core.mvc">
-	<Page id="start" title="{i18n>title}">
+<mvc:View controllerName="com.fidschenberger.wasteStatsApp.controller.Home" displayBlock="true" xmlns="sap.m" xmlns:table="sap.ui.table" xmlns:core="sap.ui.core" xmlns:f="sap.f" xmlns:layout="sap.ui.layout" xmlns:mvc="sap.ui.core.mvc">
+	<f:DynamicPage id="dynamicPageId" preserveHeaderStateOnScroll="true" headerExpanded="true">
+		<f:title>
+			<f:DynamicPageTitle>
+				<f:heading>
+					<Title text="{i18n>title}" />
+				</f:heading>
+				<f:expandedContent>
+					<Label text="This is a subheading" />
+				</f:expandedContent>
+				<f:snappedContent>
+					<Label text="This is a subheading" />
+				</f:snappedContent>
+				<f:snappedTitleOnMobile>
+					<Title text="{i18n>title}" />
+				</f:snappedTitleOnMobile>
+				<f:content>
+					<OverflowToolbar>
+						<GenericTag text="SR" status="Error" press="onGenericTagPress" design="StatusIconHidden">
+							<ObjectNumber number="2" unit="M" emphasized="false" state="Error" />
+						</GenericTag>
+					</OverflowToolbar>
+				</f:content>
+				<f:actions>
+					<ToolbarSpacer />
+					<Button text="Edit" type="Emphasized" />
+					<Button text="Delete" type="Transparent" />
+					<Button text="Copy" type="Transparent" />
+					<Button icon="sap-icon://action" type="Transparent" />
+				</f:actions>
+			</f:DynamicPageTitle>
+		</f:title>
+		<!-- DynamicPage Header -->
+		<f:header>
+			<f:DynamicPageHeader pinnable="true">
+				<FlexBox alignItems="Start" justifyContent="SpaceBetween">
+					<items>
+						<Panel backgroundDesign="Transparent" class="sapUiNoContentPadding">
+							<content>
+								<layout:HorizontalLayout class="sapUiContentPadding">
+									<Input id="inputWasteWeight" type="Number" value="{waste_items>/newWasteItem/weight}" class="sapUiSmallMarginEnd" required="true" placeholder="{i18n>inputWasteWeightPlaceholder}" />
+									<Select selectedKey="{waste_items>/newWasteItem/type}" forceSelection="true" items="{
+											path: 'waste_types>/wasteTypes',
+											sorter: { path: 'text' }
+										}" class="sapUiSmallMarginEnd">
+										<core:Item key="{waste_types>key}" text="{waste_types>text}" />
+									</Select>
+									<Button text="{i18n>addWasteButton}" press="addWaste" />
+								</layout:HorizontalLayout>
+							</content>
+						</Panel>
+					</items>
+				</FlexBox>
+			</f:DynamicPageHeader>
+		</f:header>
+		<f:content>
+			<Table id="idWasteItemsTable" inset="false" items="{
+				path: 'waste_items>/wasteItems',
+				sorter: {
+					path: 'date'
+				}
+			}">
+				<columns>
+					<Column>
+						<Text text="Type" />
+					</Column>
+					<Column>
+						<Text text="Weight" />
+					</Column>
+					<Column>
+						<Text text="Date added" />
+					</Column>
+				</columns>
+				<items>
+					<ColumnListItem>
+						<cells>
+							<Text text="{waste_items>type}" />
+							<Text text="{waste_items>weight}" />
+							<Text text="{
+									path: 'waste_items>date',
+									type: 'sap.ui.model.type.DateTime',
+									formatOptions: { 
+										style : 'medium',
+										source: {pattern: 'timestamp'}
+									}
+							}" />
+						</cells>
+					</ColumnListItem>
+				</items>
+			</Table>
+		</f:content>
+	</f:DynamicPage>
+</mvc:View> <!-- <Page id="start" title="{i18n>title}">
 		<content>
 			<Panel>
 				<FlexBox height="100px" renderType="Div">
 					<items>
-						<!-- <Label text="{i18n>inputWasteWeight}" labelFor="inputWasteWeight" class="sapUiSmallMarginEnd" /> -->
-						<Input id="inputWasteWeight" type="Number" value="{waste_items>/newWasteItem/weight}" class="sapUiSmallMarginEnd" required="true" placeholder="{i18n>inputWasteWeightPlaceholder}" />
-						<Select 
-							selectedKey="{waste_items>/newWasteItem/type}"
-							forceSelection="true" 
-							items="{
+<Input id="inputWasteWeight" type="Number" value="{waste_items>/newWasteItem/weight}" class="sapUiSmallMarginEnd" required="true" placeholder="{i18n>inputWasteWeightPlaceholder}" /><Select selectedKey="{waste_items>/newWasteItem/type}" forceSelection="true" items="{
 								path: 'waste_types>/wasteTypes',
 								sorter: { path: 'waste_types>text' }
-							}" 
-							class="sapUiSmallMarginEnd">
-							<core:Item key="{waste_types>key}" text="{waste_types>text}" />
-						</Select>
-						<Button text="{i18n>addWasteButton}" press="addWaste" />
-					</items>
-				</FlexBox>
-			</Panel>
-		</content>
-	</Page>
-</mvc:View>
+							}" class="sapUiSmallMarginEnd">
+	<core:Item key="{waste_types>key}" text="{waste_types>text}" />
+</Select><Button text="{i18n>addWasteButton}" press="addWaste" /></items></FlexBox></Panel></content></Page>-->
