--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="com.fidschenberger.wasteStatsApp.controller.Home" displayBlock="true" xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:f="sap.f" xmlns:layout="sap.ui.layout" xmlns:mvc="sap.ui.core.mvc">
+<mvc:View controllerName="com.fidschenberger.trasta.controller.Home" displayBlock="true" xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:f="sap.f" xmlns:layout="sap.ui.layout" xmlns:mvc="sap.ui.core.mvc">
 	<f:DynamicPage id="dynamicPageId" headerExpanded="true">
 		<f:title>
 			<f:DynamicPageTitle>
@@ -68,7 +68,7 @@
 					</SegmentedButton>
 				</OverflowToolbar>
 
-				<core:HTML id="Chart" visible="{configuration>/visibility/chart}" content="&lt;canvas id=&quot;container-wasteStatsApp---home--Chart&quot; width=&quot;800&quot; height=&quot;650&quot;&gt;&lt;/canvas&gt;" />
+				<core:HTML id="Chart" visible="{configuration>/visibility/chart}" content="&lt;canvas id=&quot;container-trasta---home--Chart&quot; width=&quot;800&quot; height=&quot;650&quot;&gt;&lt;/canvas&gt;" />
 
 				<PullToRefresh id="pullToRefresh" visible="false" refresh="handleRefresh" />
 				<Table id="idWasteItemsTable" visible="{configuration>/visibility/table}" inset="false" mode="Delete" delete="handleDelete" enableBusyIndicator="true" items="{
